Fixed naming inconsistencies
- Task/Function becomes Task

- fFunction: condition-consequent-alternative becomes if-then-else

Task.Name becomes Task.FunctionRef

Task.Dependencies becomes Task.Requires

Funktor/control flow struct becomes dynamic task
